--- a/src/assets/sass/_headerFrooter.scss
+++ b/src/assets/sass/_headerFrooter.scss
@@ -33,6 +33,9 @@
         font-size: 16px;
         text-transform: capitalize;
         transition: 0.4s;
+        display: flex;
+        align-items: center;
+        gap: 5px;
 
         &:hover {
           color: $black;
