--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -2,12 +2,12 @@
   .container {
     padding: 50px 10px;
     background-color: $white;
-    min-height: 100vh;
+    min-height: calc(100vh - 80px);
   }
 
   &-nav {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     margin: 20px 0;
     background-color: $bg;
     padding: 15px 10px;
@@ -76,6 +76,88 @@
       font-size: 18px;
       outline: none;
       cursor: pointer;
+    }
+  }
+}
+
+// start form
+.start-form {
+  &-wrp {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba($color: #000000, $alpha: 0.4);
+    visibility: hidden;
+    transition: 0.5s;
+    opacity: 0;
+
+    &.show {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  width: 600px;
+  background-color: $white;
+  padding: 40px 0px;
+  border-radius: 10px;
+
+  &-top {
+    border-bottom: 1px solid #999898;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 10px;
+
+    &-title {
+      font-size: 18px;
+    }
+
+    button {
+      font-size: 22px;
+    }
+  }
+
+  &-body {
+    padding: 20px 20px 0;
+
+    &-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      input {
+        height: 40px;
+        padding: 10px;
+
+        &.error {
+          border: 1px solid $red;
+        }
+      }
+
+      button {
+        display: flex;
+        margin-top: 20px;
+        background-color: $theme;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+        color: $white;
+        font-size: 16px;
+        border-radius: 4px;
+        transition: 0.4s;
+
+        &:hover {
+          transform: translateY(-2px);
+        }
+      }
     }
   }
 }
