Update login signup system

--- a/src/assets/sass/_headerFrooter.scss
+++ b/src/assets/sass/_headerFrooter.scss
@@ -40,6 +40,12 @@
         &:hover {
           color: $black;
         }
+
+        &.logout {
+          &:hover {
+            color: $red;
+          }
+        }
       }
     }
 
