--- a/src/assets/sass/_loginSignup.scss
+++ b/src/assets/sass/_loginSignup.scss
@@ -68,9 +68,13 @@
       .eye-btn {
         color: $white;
         position: absolute;
-        bottom: 10px;
+        bottom: 27px;
         right: 10px;
         cursor: pointer;
+        height: auto;
+        min-width: unset;
+
+        background-color: transparent;
       }
 
       .submit {
@@ -98,6 +102,9 @@
           font-size: 16px;
           color: $secendary;
           padding-left: 10px;
+          display: inline;
+          background-color: transparent;
+          min-width: unset;
         }
       }
     }
