--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -44,3 +44,79 @@ button {
   font-size: 24px;
   text-transform: uppercase;
 }
+
+.identifire {
+  display: flex;
+  gap: 10px;
+  padding-bottom: 50px;
+
+  & > li {
+    width: 100%;
+    height: 10px;
+    background-color: #949494;
+    border-radius: 2px;
+
+    &.active {
+      background-color: $theme;
+    }
+  }
+}
+
+.form {
+  &-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    padding-bottom: 20px;
+
+    &-wrp {
+      display: flex;
+      gap: 30px;
+    }
+
+    input,
+    textarea {
+      height: 40px;
+      padding: 10px;
+      font-size: 16px;
+      outline: none;
+
+      &.error {
+        border: 1px solid $red;
+      }
+    }
+
+    textarea {
+      height: 150px;
+    }
+
+    button {
+      display: flex;
+      margin-top: 20px;
+      background-color: $theme;
+      height: 40px;
+      align-items: center;
+      justify-content: center;
+      color: $white;
+      font-size: 16px;
+      border-radius: 4px;
+      transition: 0.4s;
+      width: max-content;
+      min-width: 200px;
+      text-transform: capitalize;
+
+      &:hover {
+        transform: translateY(-2px);
+      }
+    }
+
+    &.error {
+      input,
+      textarea {
+        border-color: $red !important;
+        border-width: 1px !important;
+      }
+    }
+  }
+}
