--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -161,3 +161,225 @@
     }
   }
 }
+
+// start
+.start {
+  padding: 60px 0;
+
+  &-info {
+    &-form {
+      background-color: $white;
+      padding: 30px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  }
+
+  &-btns {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+
+    align-items: center;
+    justify-content: space-between;
+
+    button {
+      background-color: $red;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $white;
+      padding: 10px 40px;
+      font-size: 18px;
+      border-radius: 4px;
+      transition: 0.4s;
+
+      &:disabled {
+        background-color: #999898;
+        cursor: not-allowed;
+      }
+
+      &.next {
+        background-color: $theme;
+      }
+
+      &:hover {
+        transform: translateY(-2px);
+      }
+
+      &:disabled {
+        &:hover {
+          transform: translateY(0px);
+        }
+      }
+    }
+  }
+
+  &-delivery,
+  &-timescale {
+    &-form {
+      margin-top: 20px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 20px;
+
+      &-left,
+      &-right {
+        width: 100%;
+        background-color: $white;
+        padding: 40px 20px;
+        border-radius: 10px;
+
+        & > h4 {
+          font-size: 24px;
+          margin-bottom: 20px;
+        }
+
+        & > button {
+          font-size: 15px;
+          color: $theme;
+        }
+
+        .lookup-btn {
+          margin-top: 8px;
+
+          button {
+            background-color: #d4d4d4;
+            color: $black;
+          }
+        }
+      }
+    }
+  }
+
+  &-timescale {
+    &-form {
+      &-left,
+      &-right {
+        height: 320px;
+      }
+    }
+  }
+
+  &-transport {
+    &-form {
+      background-color: $white;
+      padding: 30px 20px;
+      border-radius: 10px;
+
+      .form-group {
+        justify-content: flex-start;
+        flex-direction: row;
+        align-items: center;
+        width: max-content;
+
+        input {
+          width: 15px;
+        }
+
+        input[type='radio'] {
+          width: 15px;
+        }
+      }
+    }
+  }
+
+  &-refarance {
+    &-form {
+      background-color: $white;
+      padding: 30px 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  }
+}
+
+.details {
+  &-body {
+    background-color: $white;
+    padding: 30px 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+
+    &-top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      h2 {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+
+        strong {
+          font-size: 18px;
+          font-weight: 500;
+        }
+
+        .collapes-title {
+          color: $theme;
+          cursor: pointer;
+          padding-right: 10px;
+        }
+      }
+
+      &-right {
+        display: flex;
+        gap: 10px;
+
+        button {
+          background-color: $theme;
+          color: $white;
+          padding: 10px 20px;
+          border-radius: 4px;
+          font-size: 16px;
+          transition: 0.4s;
+
+          &:hover {
+            transform: translateY(-2px);
+          }
+
+          &:disabled {
+            background-color: #cfcfcf;
+            cursor: not-allowed;
+
+            &:hover {
+              transform: translateY(0px);
+            }
+          }
+        }
+      }
+    }
+
+    &-bottom {
+      opacity: 0;
+      height: 0;
+      overflow: hidden;
+      // transition: 0.4s;
+
+      &.show {
+        padding-bottom: 20px;
+        opacity: 1;
+        height: auto;
+      }
+      h5 {
+        font-size: 22px;
+        padding: 15px 0;
+      }
+
+      .info {
+        &-wrp {
+          display: grid;
+          grid-template-columns: auto auto auto;
+          gap: 10px;
+        }
+
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+      }
+    }
+  }
+}
