--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -76,7 +76,8 @@ button {
     }
 
     input,
-    textarea {
+    textarea,
+    select {
       height: 40px;
       padding: 10px;
       font-size: 16px;
@@ -85,6 +86,10 @@ button {
       &.error {
         border: 1px solid $red;
       }
+    }
+    span {
+      color: $red;
+      font-size: 10px;
     }
 
     textarea {
