--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -113,6 +113,35 @@
 
   &-single {
     margin: 40px 0;
+
+    &-btns {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 30px;
+
+      button {
+        display: flex;
+        margin-top: 20px;
+        background-color: $theme;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+        color: $white;
+        font-size: 16px;
+        border-radius: 4px;
+        transition: 0.4s;
+        width: 150px;
+
+        &.cancel {
+          background-color: $red;
+        }
+
+        &:hover {
+          transform: translateY(-2px);
+        }
+      }
+    }
   }
 }
 
@@ -422,6 +451,57 @@
         flex-direction: column;
         gap: 5px;
       }
+    }
+  }
+}
+
+.upload-pdf {
+  &-wrp {
+    position: fixed;
+    z-index: 9999;
+    background-color: #00000064;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  background-color: $white;
+  padding: 20px 0px;
+  border-radius: 10px;
+  width: 400px;
+
+  &-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 30px;
+    border-bottom: $border;
+
+    h4 {
+      color: $theme;
+    }
+
+    button {
+      font-size: 20px;
+    }
+  }
+
+  &-body {
+    padding: 20px 30px;
+
+    input {
+      border: $border;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+    }
+
+    button {
+      margin: 0 auto;
     }
   }
 }
