--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -84,7 +84,8 @@
     overflow-x: auto;
 
     table {
-      width: 1600px;
+      min-width: 800px;
+      width: 100%;
       margin: 30px 0 20px;
       border-collapse: collapse;
       border: $border;
