--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -84,7 +84,7 @@
     overflow-x: auto;
 
     table {
-      min-width: 800px;
+      // min-width: 800px;
       width: 100%;
       margin: 30px 0 20px;
       border-collapse: collapse;
