--- a/src/assets/sass/_headerFrooter.scss
+++ b/src/assets/sass/_headerFrooter.scss
@@ -12,6 +12,25 @@
     align-items: center;
     // gap: 10px;
 
+    .toggle {
+      display: none;
+
+      @media screen and (max-width: 500px) {
+        display: block;
+        margin: 10px;
+        font-size: 22px;
+        color: $white;
+        z-index: 99999;
+      }
+    }
+    @media screen and (max-width: 500px) {
+      img {
+        display: none;
+      }
+
+      padding: 5px 0;
+    }
+
     a {
       font-size: 18px;
       color: $black;
@@ -31,6 +50,23 @@
     &-menu {
       display: flex;
       gap: 10px;
+
+      @media screen and (max-width: 500px) {
+        position: fixed;
+        width: 300px;
+        background-color: rgba($color: #000000, $alpha: 0.9);
+        height: 100vh;
+        top: 0;
+        left: -300px;
+        flex-direction: column;
+        padding: 20px;
+        justify-content: center;
+        z-index: 99;
+
+        &.show {
+          left: 0;
+        }
+      }
 
       a {
         color: $white;
