--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -379,14 +379,37 @@
       align-items: center;
       justify-content: space-between;
 
+      &-left {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+
+        svg {
+          font-size: 22px;
+        }
+      }
+
       h2 {
         display: flex;
         align-items: center;
         gap: 4px;
 
+        @media screen and (max-width: 500px) {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+
         strong {
           font-size: 18px;
           font-weight: 500;
+
+          @media screen and (max-width: 500px) {
+            font-size: 12px;
+            display: flex;
+            align-items: center;
+            gap: 3px;
+            justify-content: flex-start;
+          }
         }
 
         .collapes-title {
@@ -445,6 +468,10 @@
           display: grid;
           grid-template-columns: auto auto auto;
           gap: 10px;
+
+          @media screen and (max-width: 500px) {
+            grid-template-columns: auto;
+          }
         }
 
         width: 100%;
