--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -296,6 +296,10 @@
       justify-content: space-between;
       gap: 20px;
 
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+      }
+
       &-left,
       &-right {
         width: 100%;
@@ -319,6 +323,10 @@
           button {
             background-color: #d4d4d4;
             color: $black;
+
+            @media screen and (max-width: 500px) {
+              min-width: 100px;
+            }
           }
         }
       }
